--- a/src/app/layout/all-blogs/all-blogs.component.html
+++ b/src/app/layout/all-blogs/all-blogs.component.html
@@ -1,7 +1,7 @@
-<div class="new-featured-amazon arrive topdeal">
+<div class="new-featured-amazon arrive topdeal" ngClass.lt-xl="amazonhome5">
 
     <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-        fxFlex.lg="1270px" fxFlex.xl="1910px">
+        fxFlex.lg="1270px" fxFlex.xl="1800px" >
         <div class="category-amazon" fxLayout="row">
             <div class="top-line">
                 <div class="single-line">
