--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,5 +1,5 @@
 <section *ngIf="!isMobile()" class="home" fxLayout="column" ngClass.xs="amazonhome1" ngClass.sm="amazonhome2"
-    ngClass.md="amazonhome3">
+    ngClass.md="amazonhome3" ngClass.lt-xl="amazonhome5">
     <div class="category" id="homeFirsttwo">
         <div class="cate-amazon" fxLayout="row" fxLayout.xs="column">
             <div class="cate-img left1" fxFlex="40%" fxFlex.xs="100%" fxFlex.sm="100%">
@@ -77,8 +77,8 @@
 
     <div class="category-featured-amazon" id="homeFirsttwo">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
-            <div class="heading">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
+            <div class="heading categorieshead">
                 <p> shop top amazon categories</p>
                 <h1> Top rated and best <span>Products</span></h1>
             </div>
@@ -99,7 +99,7 @@
 
     <div class="new-featured-amazon">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p>Popular Item in the market</p>
                 <h1>Featured <span>Product</span></h1>
@@ -679,7 +679,7 @@
 
     <div class="category-featured-amazon allbanners-i">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p> Shop Top Amazon </p>
                 <h1> Top Rated and Best <span>Products</span></h1>
@@ -764,7 +764,7 @@
     <div class="topdeald">
         <div class="new-featured-amazon allbanner">
             <div class="new featured-amazon" fxLayout="column" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="588"
-                fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>New launches in AMAZON electronics</p>
                     <h1>Best <span>Offers</span></h1>
@@ -836,7 +836,7 @@
 
         <div class="new-featured-amazon topdeal">
             <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>Popular Item in the market</p>
                     <h1>Top <span>Deal</span></h1>
@@ -1022,7 +1022,7 @@
         <!----------top-deal-------------->
         <div class="new-featured-amazon allbanner">
             <div class="new featured-amazon" fxLayout="column" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="588"
-                fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>New launches in AMAZON Electronics</p>
                     <h1>Best <span>offers</span></h1>
@@ -1092,7 +1092,7 @@
         <!----------top-deal-------------->
         <div class="new-featured-amazon arrive topdeal">
             <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>Popular Item in the market</p>
                     <h1>Arrival <span>Product</span></h1>
@@ -1285,7 +1285,7 @@
 
         <div class="new-featured-amazon arrive moviedeal">
             <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>See movies reviews</p>
                     <h1>Movies <span>Review </span></h1>
@@ -1453,7 +1453,7 @@
         <!-----------blog------->
         <div class="new-featured-amazon arrive blog">
             <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-                fxFlex.lg="1270px" fxFlex.xl="1910px">
+                fxFlex.lg="1270px" fxFlex.xl="1800px">
                 <div class="heading">
                     <p>From The Blog</p>
                     <h1>Our <span>Blog</span></h1>
@@ -1544,7 +1544,7 @@
     ngClass.md="amazonhome3">
     <div class="category-featured-amazon">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
 
             <div class="category-featured" fxLayout="row">
                 <div class="cate-text" *ngFor="let category of categories">
@@ -1599,7 +1599,7 @@
 
     <div class="new-featured-amazon">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p>Popular Item in the Market</p>
                 <h1>Featured <span>Product</span></h1>
@@ -1672,7 +1672,7 @@
     <!----------top-deal-------------->
     <div class="new-featured-amazon allbanner">
         <div class="new featured-amazon" fxLayout="column" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="588"
-            fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div fxLayout="column">
                 <div class="img-slider" fxFlex="50%" fxFlex.xs="99%%" fxFlex.sm="99%">
                     <div class="slide1-img">
@@ -1687,7 +1687,7 @@
 
     <div class="new-featured-amazon topdeal">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p>Popular Item in the Market</p>
                 <h1>Top <span>Deal</span></h1>
@@ -1877,7 +1877,7 @@
     </div>
     <div class="new-featured-amazon allbanner">
         <div class="new featured-amazon" fxLayout="column" fxLayout.xs="column" fxLayout.sm="column" fxFlex.xs="588"
-            fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.sm="590px" fxFlex.md="950px" fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div fxLayout="row">
                 <div class="img-slider" fxFlex="100%" fxFlex.xs="99%%" fxFlex.sm="99%">
                     <div class="slide1-img">
@@ -1894,7 +1894,7 @@
 
     <div class="category-featured-amazon ">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p> Shop Amazon Categories</p>
                 <h1> Top rated and best <span>Products</span></h1>
@@ -1980,7 +1980,7 @@
 
     <div class="new-featured-amazon arrive topdeal">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p>Popular Item in the market</p>
                 <h1>Arrival <span>Product</span></h1>
@@ -2140,7 +2140,7 @@
     <!-----------blog------->
     <div class="new-featured-amazon arrive blog">
         <div class="new featured-amazon" fxLayout="column" fxFlex.xs="588" fxFlex.sm="590px" fxFlex.md="950px"
-            fxFlex.lg="1270px" fxFlex.xl="1910px">
+            fxFlex.lg="1270px" fxFlex.xl="1800px">
             <div class="heading">
                 <p>From The Blog</p>
                 <h1>Our <span>Blog</span></h1>
