--- a/src/app/layout/auth/header/header.component.scss
+++ b/src/app/layout/auth/header/header.component.scss
@@ -207,25 +207,55 @@ ul li span {
 .mobile-haeder .search input {
     width: 89%;
     border-radius: 0px 5px 5px 0;
+}
 
+span.loginli mat-icon.mat-icon {
+    width: 23px;
+    font-size: 15px;
+    height: auto;
+    padding: 5px;
+}
+span.loginli {
+    color: #fff;
+    display: flex;
+    place-content: end;
+    align-items: center;
+    font-family: "Open Sans", sans-serif;
+    font-size: 12px;
+    letter-spacing: 0.5px;
+    padding: 8px 0 5px;
+}
+span.loginli mat-icon.mat-icon {
+    width: 23px;
+    font-size: 15px;
+    height: auto;
+    padding: 5px;
 }
 .mobile-haeder .menus ul li {
     padding: 0px 0pc;
 }
 .top-head {
-    // background: linear-gradient(45deg, #c4efe4, #bce2d0);
     padding:0.5pc 0 0.5pc;
     background: #000;
 }
 .menus ul li img {
-    width: 34px;
-    margin: 0px 10px;
+   width:26px;
+   margin:0px 8px;
+}
+.menusLogin img {
+    width: 130px;
+    padding: 0px;
+}
+.menusLogin {
+    background: #000;
+    display: flex;
+    flex-direction: column;
 }
 .cate-sidenav button {
       font-size: 13px;
     text-align: start;
     border: 0;
-    font-family: "Open Sans", sans-serif;
+    font-family:'Cabin';
     height: 45px;
     line-height: 45px;
     display: flex;
@@ -332,14 +362,11 @@ button.mat-focus-indicator.searchfield.mat-menu-item {
 }
 }
 .amazonheader1 .logo img {
-    width: 50%;
+    width:65% !important;
     display: block;
-    margin: 0 auto;
     position: relative;
     top: -2px;
 }
-
-
 
 .topicon {
     position: fixed;
@@ -354,8 +381,8 @@ button.mat-focus-indicator.searchfield.mat-menu-item {
     place-content: center;
     align-items: center;
     padding: 0px;
-    cursor: pointer;    text-decoration: none;
-
+    cursor: pointer;  
+    text-decoration: none;
 }
 .topicon mat-icon {
     font-size: 17px;
@@ -364,4 +391,7 @@ button.mat-focus-indicator.searchfield.mat-menu-item {
     place-content: center;
     align-items: center;
     font-weight: 100;
+}
+.example-sidenav-content button {
+    padding: 0;
 }
